--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,11 @@
-<p>graficas1 works!</p>
+<div class="row">
+        <div class="col-6" *ngFor="let key  of graficos | keys">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title"> {{ graficos[key].leyenda }}</h4>
+                    <app-grafico-dona  [doughnutChartData]="graficos[key].data" [doughnutChartLabels]="graficos[key].labels" [doughnutChartType]="graficos[key].type" ></app-grafico-dona>
+
+                </div>
+            </div>
+        </div>
+    </div>
