--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,45 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Barra de progreso</h4>
+
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="progreso1" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width]="progreso1 + '%'"></div>
+                </div>     
+                <br>
+                
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValuenow]="progreso2" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width]="progreso2 + '%'"></div>
+                </div>                     
+            </div>
+        </div>
+    </div>
+</div> 
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador (cambioValor)="progreso1 = $event" leyenda = "Progress azul" [progreso]="progreso1"></app-incrementador>
+                <!-- <div class="input-group">
+                    <div class="input-group-prepend" id="button-addon3">
+                      <button class="btn btn-outline-primary" type="button" (click)="cambiarValor(-5)"><i class="mdi mdi-minus"></i> </button>
+                    </div>
+                    <input type="text" class="form-control" name="progreso" [(ngModel)]="progreso">
+                
+                    <div class="input-group-prepend" id="button-addon3">
+                        <button class="btn btn-outline-primary" type="button" (click)="cambiarValor(+5)"><i class="mdi mdi-plus"></i></button>
+                      </div> 
+                </div> -->
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador (cambioValor)="progreso2 = $event" leyenda = "Progress verde" [progreso]="progreso2"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+</div>
