--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -14,14 +14,14 @@
                         <li><a href="javascript:void()">My Balance</a></li>
                         <li><a href="javascript:void()">Inbox</a></li>
                         <li><a [routerLink]="['/account-settings']" routerLinkActive="active">Account Setting</a></li>
-                        <li><a [routerLink]="['/login']">Logout</a></li>
+                        <li><a (click)="_usuarioService.logout()" class="pointer">Logout</a></li>
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
                 <li *ngFor="let menu of _sb.menu"> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i [class]="menu.icono"></i><span class="hide-menu"> {{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right"> {{ menu.submenu.length }}</span></span></a>
                     <ul aria-expanded="false" class="collapse">
-                        <li *ngFor="let sub of menu.submenu"><a [routerLink]="[sub.url]" routerLinkActive="active" >{{ sub.titulo }} </a></li>
+                        <li *ngFor="let sub of menu.submenu"><a [routerLink]="[sub.url]" routerLinkActive="active">{{ sub.titulo }} </a></li>
 
                     </ul>
                 </li>
