--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -18,7 +18,7 @@
             <!-- Start Page Content -->
             <!-- ============================================================== -->
 
-             <router-outlet></router-outlet>
+            <router-outlet></router-outlet>
 
             <!-- 
             <div class="row">
@@ -42,3 +42,6 @@
     <!-- ============================================================== -->
     <!-- End Page wrapper  -->
 </div>
+
+<!-- Modal Upload-->
+<app-modal-upload></app-modal-upload>
